--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,6 +3,7 @@ table{
     border-collapse: collapse;
     margin-top: 3px;
     margin-left: 5%;
+    border:1px solid black;
 }
 td {
     background-color: rgb(226, 239, 243);
@@ -20,4 +21,31 @@ td {
     border:1px solid white;
     background-color: rgb(36, 32, 32);
     margin-top: 2px;
+    width: 50%;
+    height: 50px;
+  }
+  tr:hover{
+    background-color: blueviolet;
+  }
+  body{
+    margin: 0%;
+    margin-top: -20px;
+    background-color: antiquewhite;
+  }
+  #nav-bar{
+    width: 100%;
+    height: 40px;
+    background-color: rgb(37, 37, 84);
+    color: whitesmoke;
+  }
+  #div-container{
+    margin-top: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  #add-file-container{
+    border-radius: 5px;
+    background-color: darkslategray;
   }
